--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ h1{
 }
 section{
     display: flex;
-   
+   margin-bottom: 100px;
 }
 .half-width{
     width: 50%;
@@ -29,4 +29,9 @@ section{
 .top-banner{
     background-image: url(image/top-banner.png);
     background-repeat: no-repeat;
+}
+.dream-big{
+    background-image: url(image/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
